force-app/main/default/objects/Service_Order_Line__c/Service_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Service Order Line</label>
    <pluralLabel>Service Order Lines</pluralLabel>
    <description
  >An individual product line within a Service Order, capturing quantity, unit price, and discount.</description>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Service Order Line Number</label>
        <type>AutoNumber</type>
        <displayFormat>SOL-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>