force-app/main/default/objects/Service_Order_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Order Lines</relationshipLabel>
    <relationshipName>Service_Order_Lines</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product being ordered on this line.</description>
</CustomField>