force-app/main/default/objects/Service_Order_Line__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <label>Service Order</label>
    <type>MasterDetail</type>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>Service Order Lines</relationshipLabel>
    <relationshipName>Service_Order_Lines</relationshipName>
    <description>The parent order this line item belongs to.</description>
</CustomField>